@@ -1,37 +1,89 @@
 package com.xtremand.email.verification.service;
 
+import com.xtremand.domain.entity.User;
+import com.xtremand.email.verification.model.ChartDropdownRange;
+import com.xtremand.email.verification.model.ChartDropdownResponse;
 import com.xtremand.email.verification.model.dto.chart.ChartDataDto;
 import com.xtremand.email.verification.model.dto.chart.ChartDataResponseDto;
-import com.xtremand.email.verification.model.dto.chart.ChartDropdownDto;
 import com.xtremand.email.verification.model.dto.chart.ChartRange;
 import com.xtremand.email.verification.repository.EmailVerificationHistoryRepository;
+import com.xtremand.user.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
 import java.time.Instant;
+import java.time.ZoneId;
+import java.time.ZonedDateTime;
 import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 
 @Service
 @RequiredArgsConstructor
 public class EmailVerificationChartService {
 
     private final EmailVerificationHistoryRepository historyRepository;
+    private final UserRepository userRepository;
 
-    public List<ChartDropdownDto> getDropdowns() {
-        return List.of(
-                new ChartDropdownDto("Last 1 Month", "1M"),
-                new ChartDropdownDto("Last 3 Months", "3M"),
-                new ChartDropdownDto("Last 6 Months", "6M"),
-                new ChartDropdownDto("Last 1 Year", "1Y"),
-                new ChartDropdownDto("Last 3 Years", "3Y"),
-                new ChartDropdownDto("Last 5 Years", "5Y")
-        );
+    public List<ChartDropdownResponse> getAvailableDropdownRanges() {
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        if (authentication == null) {
+            return Collections.emptyList();
+        }
+        String userEmail = authentication.getName();
+        Optional<User> userOpt = userRepository.findByEmail(userEmail);
+
+        if (userOpt.isEmpty()) {
+            return List.of(new ChartDropdownResponse(
+                ChartDropdownRange.LAST_1_MONTH.getLabel(),
+                ChartDropdownRange.LAST_1_MONTH.getValue()
+            ));
+        }
+
+        Long userId = userOpt.get().getId();
+        Optional<EmailVerificationHistoryRepository.DateRangeProjection> dateRangeOpt = historyRepository.findDateRangeByUserId(userId);
+
+        if (dateRangeOpt.isEmpty() || dateRangeOpt.get().getEarliest() == null || dateRangeOpt.get().getLatest() == null) {
+            return List.of(new ChartDropdownResponse(
+                ChartDropdownRange.LAST_1_MONTH.getLabel(),
+                ChartDropdownRange.LAST_1_MONTH.getValue()
+            ));
+        }
+
+        Instant earliestInstant = dateRangeOpt.get().getEarliest();
+        Instant latestInstant = dateRangeOpt.get().getLatest();
+
+        ZonedDateTime earliestZoned = earliestInstant.atZone(ZoneId.systemDefault());
+        ZonedDateTime latestZoned = latestInstant.atZone(ZoneId.systemDefault());
+
+        long monthsOfData = ChronoUnit.MONTHS.between(earliestZoned, latestZoned);
+
+        List<ChartDropdownResponse> ranges = new ArrayList<>();
+        ranges.add(new ChartDropdownResponse(ChartDropdownRange.LAST_1_MONTH.getLabel(), ChartDropdownRange.LAST_1_MONTH.getValue()));
+
+        if (monthsOfData >= 3) {
+            ranges.add(new ChartDropdownResponse(ChartDropdownRange.LAST_3_MONTHS.getLabel(), ChartDropdownRange.LAST_3_MONTHS.getValue()));
+        }
+        if (monthsOfData >= 6) {
+            ranges.add(new ChartDropdownResponse(ChartDropdownRange.LAST_6_MONTHS.getLabel(), ChartDropdownRange.LAST_6_MONTHS.getValue()));
+        }
+        if (monthsOfData >= 12) {
+            ranges.add(new ChartDropdownResponse(ChartDropdownRange.LAST_1_YEAR.getLabel(), ChartDropdownRange.LAST_1_YEAR.getValue()));
+        }
+        if (monthsOfData >= 36) {
+            ranges.add(new ChartDropdownResponse(ChartDropdownRange.LAST_3_YEARS.getLabel(), ChartDropdownRange.LAST_3_YEARS.getValue()));
+        }
+        if (monthsOfData >= 60) {
+            ranges.add(new ChartDropdownResponse(ChartDropdownRange.LAST_5_YEARS.getLabel(), ChartDropdownRange.LAST_5_YEARS.getValue()));
+        }
+
+        return ranges;
     }
 
     public ChartDataResponseDto getChartData(ChartRange range) {
